# py-notes

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: intro.md
_sources/concurrency/: multithreading.ipynb
_sources/data-models/: pydantic.ipynb  settings.ipynb
_sources/fundamentals/: custom-generators.ipynb
_sources/large-language-models/: qdrant.ipynb
_sources/structured-data-files/: csv.ipynb  index.md
_sources/yolov8/: index.md  pose-estimation.ipynb
book/: _config.yml  _toc.yml
book/data-models/: pydantic.ipynb
book/fundamentals/: generators.ipynb  index.md
book/large-language-models/: index.md
book/structured-data-files/: csv.ipynb  temporary-files.ipynb
book/web-applications/: main.py
book/yolov8/: pred_pose.py
code_with_notes/hello_wandb/: data.py  model.py  train.py
code_with_notes/hello_wandb/wandb/: latest-run
code_with_notes/hello_wandb/wandb/run-20230407_020019-ql10l0eg/: run-ql10l0eg.wandb
code_with_notes/hello_wandb/wandb/run-20230407_020357-wk6z9iea/: run-wk6z9iea.wandb
concurrency/: index.html  multithreading.html
data-models/: index.html  index.md  pydantic.html  pydantic.ipynb  settings.html
fundamentals/: custom-generators.html  custom-generators.ipynb  generators.html  index.html
large-language-models/: index.html  qdrant.html  qdrant.ipynb
structured-data-files/: csv.html  index.html  temporary-files.html
web-applications/: fastapi.html  index.html
yolov8/: index.html  pose-estimation.html
(+6 files in other folders)
