[tool.poetry]
name = "py-notes"
version = "0.1.0"
description = ""
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
qdrant-client = "^1.6.4"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
sphinx-proof = "^0.1.3"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
pydantic-settings = "^2.1.0"
ultralytics = "^8.1.29"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
